<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_view_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banff" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        app:srcCompat="@drawable/ic_visibility" />

    <TextView
        android:id="@+id/text_title"
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_view_top"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/text_location_label"
        style="@style/AppTheme.Table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/location_label"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_population_label"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.286" />

    <TextView
        android:id="@+id/text_population_label"
        style="@style/AppTheme.Table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/population_label"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_location_label"
        app:layout_constraintLeft_toRightOf="@+id/text_location_label"
        app:layout_constraintRight_toLeftOf="@+id/text_founded_label" />

    <TextView
        android:id="@+id/text_founded_label"
        style="@style/AppTheme.Table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/founded_label"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_population_label"
        app:layout_constraintLeft_toRightOf="@+id/text_population_label"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/text_location_descr"
        style="@style/AppTheme.Table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location_description"
        android:visibility="gone"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_population_descr"
        app:layout_constraintTop_toBottomOf="@+id/text_location_label" />

    <TextView
        android:id="@+id/text_population_descr"
        style="@style/AppTheme.Table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/population_description"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_location_descr"
        app:layout_constraintLeft_toRightOf="@+id/text_location_descr"
        app:layout_constraintRight_toLeftOf="@+id/text_founded_descr"
        tools:layout_editor_absoluteX="163dp" />

    <TextView
        android:id="@+id/text_founded_descr"
        style="@style/AppTheme.Table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/founded_description"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_population_descr"
        app:layout_constraintLeft_toRightOf="@+id/text_population_descr"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintLeft_toLeftOf="@+id/guideline3"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:srcCompat="@drawable/banff_logo" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.74" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.97" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="16dp"
        android:text="@string/banff_description"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10" />

</android.support.constraint.ConstraintLayout>